# ArtificialIntelligenceSemesterProject

./: .gitignore  README.md  requirements.txt
IoT-Smart-Home-Agent-Based-main/IoT-Smart-Home-Agent-Based-main/: .env.example  AI_CONCEPTS.md  ARDUINO_SETUP.md  LICENSE  README.md  UI_DESIGN.md  configure-mobile.bat  configure-mobile.sh  pyproject.toml  requirements.txt  start.bat  start.sh
src/games/: __init__.py  minimax.py  tictactoe.py
src/search/: __init__.py  astar.py  bfs.py  dfs.py
tests/: test_search.py  test_tictactoe.py
